--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
@@ -42,6 +42,7 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" />
+                    <button type="button" class="btn btn-primary">@Html.ActionLink("Cancel", "Articles", null, new { @class = "cancelBtn" })</button>
                 </div>
             </div>
         </form>
