Revert "Minor styling changes"
This reverts commit f76a871c43540106222f33fe0774b14a23455d9d.

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
@@ -46,7 +46,7 @@
 </script>
 
 
-<div style="margin-left: 5px; margin-top: 20px">
+<div style="margin-left: 5px;">
     <table>
         <tr>
             <td>
