--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
@@ -4,18 +4,10 @@
 }
 @model SmokeFreeApplication.Models.BroadcastMessage
 
-<style>
-    .imgclass {
-        max-width: 100%;
-        height: auto;
 
-    }
-</style>
 <div class="alert alert-info" role="alert">
     <h4 class="alert-heading">@Html.DisplayFor(modelItem => Model.title)</h4>
     <p>@Html.DisplayFor(modelItem => Model.content)</p>
-    <hr>
-    <p class="mb-0">@Html.DisplayFor(modelItem => Model.ownerName)</p>
 </div>
 
 
@@ -28,13 +20,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100 imgclass" src="~/images/smoke-free1.png" alt="">
+                <img class="d-block w-100" src="~/images/smoke-free1.png" alt="">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 imgclass" src="~/images/smoke-free2.png" alt="">
+                <img class="d-block w-100" src="~/images/smoke-free2.png" alt="">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 imgclass" src="~/images/smoke-free2.png" alt="">
+                <img class="d-block w-100" src="~/images/smoke-free2.png" alt="">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
