--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpMember.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpMember.cshtml
@@ -15,7 +15,7 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.userName)</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.GeneralUsers.userName, "", new { @class = "form-control", @placeholder = "Username" })
+            @Html.TextBoxFor(m => m.GeneralUsers.userName, "", new { @class = "form-control", @placeholder = "e.g. ABCDE" })
             @Html.ValidationMessageFor(m => m.GeneralUsers.userName, "", new { @class = "badge badge-danger" })
             @if (ViewData["UsernameExists"] != null)
             {
