--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/InterestedParty/EditMemberProfile.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/InterestedParty/EditMemberProfile.cshtml
@@ -2,27 +2,22 @@
     ViewBag.Title = "EditMemberProfile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 @model SmokeFreeApplication.Models.InterestedPartyCompoundModel
 @using (Html.BeginForm("EditedMemberProfile", "InterestedParty", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <style>
-        .btnSignUp {
-            margin: 10px;
-        }
-    </style>
     <h4>Edit Profile</h4>
 
     <div class="form-group row">
-        <img src="@Url.Action("RetrieveMemberrPic", "InterestedParty", new { username = ViewBag.username})" style="width:5rem; height:5rem; float:left; margin-right:10px;" alt="Image" />
         <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.profilePicture)</label>
+        <img src="@Url.Action("RetrieveMemberPic", "InterestedParty", new { username = ViewBag.username})" style="width:50px; height:50px; float:left; margin-right:10px;" alt="Image" />
         <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
     </div>
 
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.InterestedParties.bio)</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.InterestedParties.bio, "", new { @class = "form-control", @Value = ViewBag.bio })
-            @Html.ValidationMessageFor(m => m.InterestedParties.bio, "", new { @class = "badge badge-danger" })
+            @Html.TextAreaFor(m => m.InterestedParties.bio, new { @class = "form-control" })
         </div>
     </div>
 
