Fixes to viewcomment and track progression
Enabled link from view comment where clicking a username will link to the profile page

track progress displays the user's real name instead of username

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/ViewComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/ViewComment.cshtml
@@ -21,7 +21,7 @@
                     <div class="card-body" style="padding:10px">
                         <div class="d-flex">
                             <div class="mr-auto">
-                                <h6>@Html.DisplayFor(modelItem => item.userName) says</h6>
+                                <h6>@Html.ActionLink(item.userName, "MemberProfile", "InterestedParty", new { viewUsername = item.userName }, new { page = 1 }) says</h6>
                             </div>
                             <div>
                                 <p class="text-muted">@Html.DisplayFor(modelItem => item.postDate)</p>
