Bug fix and Added placeholder for reject article/doc form
- bug fix for reject doc. where a doc exists in doctor table but not in general table
This only happens because this dummy data was created using server explorer and only added in doctor table.

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
@@ -56,9 +56,9 @@
 
                                         @Html.ValidationSummary()
                                         <p>Subject: </p>
-                                        <p>@Html.TextBoxFor(m => Model.emailModel.Subject)</p>
+                                        <p>@Html.TextBoxFor(m => Model.emailModel.Subject, new { @placeholder = "Article Rejected - Thank you for your interest" })</p>
                                         <p>Body: </p>
-                                        <p>@Html.TextAreaFor(m => Model.emailModel.Body)</p>
+                                        <p>@Html.TextAreaFor(m => Model.emailModel.Body, new { @placeholder = "Hi Sir/Mdm,\n Sorry, we have deem it unfit to be posted. Please submit another one\n Thank you" })</p>
                                         <input type="submit" class="btn btn-primary" value="Send" />
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                     }
@@ -81,10 +81,3 @@
        </ul>
     </div>
 </nav>
-
-
-
-@*
-    <p>@Model.articleStatus</p>
-
-*@
