--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/DoctorManage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/DoctorManage.cshtml
@@ -55,9 +55,9 @@
                                         @Html.HiddenFor(m => Model.model.userName);
                                         @Html.ValidationSummary()
                                         <p>Subject: </p>
-                                        <p>@Html.TextBoxFor(m => Model.emailModel.Subject)</p>
+                                        <p>@Html.TextBoxFor(m => Model.emailModel.Subject, new { @placeholder = "Registration rejected - Thank you for your interest" })</p>
                                         <p>Body: </p>
-                                        <p>@Html.TextAreaFor(m => Model.emailModel.Body)</p>
+                                        <p>@Html.TextAreaFor(m => Model.emailModel.Body, new { @placeholder = "Hi Sir/Mdm,\n Sorry, we have deem you unfit to be accepted. Please submit another one request\n Thank you" })</p>
                                         <input type="submit" class="btn btn-primary" value="Send" />
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                     }
