--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/About.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/About.cshtml
@@ -4,8 +4,6 @@
 
 <h2>About us</h2>
 <br />
-<img src="https://images.unsplash.com/photo-1522756890800-ac12d130a43f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="" style="width:1000px;height:500px;">
-<br />
 <br />
 <h4>MISSION</h4>
 
@@ -16,7 +14,6 @@
     comment on these articles and interact with one another. Similarly, smokers will
     also be able to share their own recovery stories.
 </p>
-
 <p>
     We also provide interesting features such as track quit smoking progress that gives smokers
     a view on how far they have come in quitting smoking and how much money they have
@@ -27,5 +24,34 @@
     <br />
     We will not disappoint you with the articles and stories shared by smokers and professionals.
 </p>
+<br />
+<br />
+<h4>Meet Our Team</h4>
+
+<div class="w3-container">
+    <div class="card-columns">
+        <div class="card" style="width: 18rem; height:32rem;">
+            <img class="card-img-top" src="https://i.pinimg.com/236x/77/71/68/7771683223d86b237a3304d6f32828b9--headshot-poses-headshot-photography.jpg" alt="" style="width:287px;height:400px;">
+            <div class="card-body">
+                <h5 class="card-title">Serene Tan</h5>
+                <p class="card-text">Smoke-Free Founder</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; height: 32rem;">
+            <img class="card-img-top" src="https://www.nccs.com.sg/sites/shcommonassets/Assets/doctors/portrait-photos/Soo%20Khee%20Chee.jpg" alt="" style="width: 287px; height: 400px;">
+            <div class="card-body">
+                <h5 class="card-title">Soo Khee Chee</h5>
+                <p class="card-text">Certified Doctor and Quit Smoking Advisor.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; height: 32rem;">
+            <img class="card-img-top" src="https://www.a-star.edu.sg/images/librariesprovider13/default-album/min-han-tan.jpg" alt="" style="width: 287px; height: 400px;">
+            <div class="card-body">
+                <h5 class="card-title">Tan Min Han</h5>
+                <p class="card-text">Quit Smoking Advisor.</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 
