--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Content/story-style.css
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Content/story-style.css
@@ -5,6 +5,9 @@
 #bodyVali {
     display: none;
 }
+#imgVali {
+    display: none;
+}
 #title, #tags{
     width: 100% !important;
     max-width: 100% !important;
