--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/Articles.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/Articles.cshtml
@@ -53,6 +53,7 @@ Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.Page
     <link href="~/Content/article-style.css" rel="stylesheet">
     <link href="~/Content/story-style.css" rel="stylesheet">
     <script type="text/javascript" src="~/Scripts/search.js"></script>
+    <script type="text/javascript" src="~/Scripts/article-validation.js"></script>
 }
 
 
