--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
@@ -1,55 +1,55 @@
 ﻿@model SmokeFreeApplication.Models.Article
 
-    @{
-        ViewBag.Title = "createArticle";
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }
+@{
+    ViewBag.Title = "createArticle";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
-    <br />
-    <h2>Create an Article</h2>
+<br />
+<h2>Create an Article</h2>
 
-    @using (Html.BeginForm("createArticle", "Article", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        @Html.AntiForgeryToken()
-        <hr />
-        <form onsubmit="return false;">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+@using (Html.BeginForm("createArticle", "Article", FormMethod.Post, new { enctype = "multipart/form-data", @id = "createForm" }))
+{
+    @Html.AntiForgeryToken()
+    <hr />
 
-            <div class="form-group">
-                    <h5>Title: </h5>
-                    <div>
-                        @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control create-article-field" } })
-                        @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-            <div class="form-group">
-                    <h5>Description: </h5>
-                    <div>
-                        @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control" } })
-                        <span id="bodyVali" class="badge badge-danger">Please enter the article description that has at least 500 characters!</span>
-                    </div>
-                </div>
-
-            <div class="form-group">
-                <h5>Upload Article Image </h5>
-                <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
+        <div class="form-group">
+            <h5><strong style="color:red;">*</strong>Title: </h5>
+            <div>
+                @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control" } })
+                <span id="titleVali" class="badge badge-danger">Please enter the story title that has at least 3 words!</span>
             </div>
+        </div>
 
-            @Html.Partial("~/Views/Shared/_TagField.cshtml")
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" />
-                    <button type="button" class="btn btn-primary">@Html.ActionLink("Cancel", "Articles", null, new { @class = "cancelBtn" })</button>
-                </div>
+        <div class="form-group">
+            <h5><strong style="color:red;">*</strong>Description: </h5>
+            <div>
+                @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control" } })
+                <span id="bodyVali" class="badge badge-danger">Please enter the story description that has at least 1000 characters!</span>
+                <p style="text-align:left; display:inline;text-decoration:solid">Words Limit:</p>
+                <p id="withinRange" style="text-align:right;display:inline;">5000</p>
             </div>
-        </form>
-    }
-    @section Scripts
+        </div>
+
+        <div class="form-group">
+            <h5><strong style="color:red;">*</strong>Upload Article Image: </h5>
+            <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
+            <span id="imgVali" class="badge badge-danger" style="display:none;">Please upload article image.</span>
+        </div>
+
+        @Html.Partial("~/Views/Shared/_TagField.cshtml")
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button id="createBtn" type="submit" class="btn btn-primary">Create</button>
+                <button type="button" class="btn btn-primary">@Html.ActionLink("Cancel", "Articles", null, new { @class = "cancelBtn" })</button>
+            </div>
+        </div>
+}
+@section Scripts
     {
-      @*  <link href="~/Content/article-style.css" rel="stylesheet">*@
-        <link href="~/Content/story-style.css" rel="stylesheet">
-        <link href="~/Summernote/summernote-bs4.css" rel="stylesheet">
-        <script type="text/javascript" src="~/Summernote/summernote-bs4.js"></script>
-        <script type="text/javascript" src="~/Scripts/text-editor.js"></script>
-    }
+    <link href="~/Content/story-style.css" rel="stylesheet">
+    <link href="~/Summernote/summernote-bs4.css" rel="stylesheet">
+    <script type="text/javascript" src="~/Summernote/summernote-bs4.js"></script>
+    <script type="text/javascript" src="~/Scripts/text-editor.js"></script>
+    <script type="text/javascript" src="~/Scripts/article-validation.js"></script>
+}
