--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
@@ -12,13 +12,14 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="d-flex collapse">
-            <div class="p-1">
+            <div class="p-1" style="width:90%;">
                 @Html.EditorFor(model => model.body, new { htmlAttributes = new { @class = "form-control comment-field", @placeholder = "What's on your mind?" } })
                 @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
             </div>
-            <div class="p-1">
-                <input type="button" onclick="this.form.submit();" value="Post" class="btn btn-default" />
+            <div class="p-1" style="width:10%;">
+                <input type="button" onclick="this.form.submit();" value="Post" class="btn btn-default" style="float: right;" />
             </div>
         </div>
     </div>
 }
+
